name:           GPipe-Core
version:        0.1
cabal-version:  >= 1.8
build-type:     Simple
author:         Tobias Bexelius

library
  hs-source-dirs:   src
  build-depends:    
                   base >= 4,
                   transformers,
                   exception-transformers,
                   containers,
                   Boolean >= 0.2.3 && <0.3,
                   hashtables >= 1.2.0.2 && < 1.3,
                   OpenGLRaw >= 2.5.0.0 && < 2.6
  ghc-options:      -Wall
  exposed-modules:  
                    Data.SNMap,
                    Graphics.GPipe.Context,
                    Graphics.GPipe.Format,
                    Graphics.GPipe.Buffer,
                    Graphics.GPipe.Shader,
                    Graphics.GPipe.Expr,
                    Graphics.GPipe.PrimitiveArray,
                    Graphics.GPipe.PrimitiveStream,
                    Graphics.GPipe.FragmentStream,
                    Graphics.GPipe.Uniform,
                    Graphics.GPipe.Texture,
                    Graphics.GPipe.Sampler,
                    Graphics.GPipe.FrameBuffer
  other-modules:    
                    Graphics.GPipe.Internal.Buffer,
                    Graphics.GPipe.Internal.Compiler,
                    Graphics.GPipe.Internal.Context,
                    Graphics.GPipe.Internal.Expr,
                    Graphics.GPipe.Internal.Format,
                    Graphics.GPipe.Internal.FragmentStream,
                    Graphics.GPipe.Internal.FrameBuffer,
                    Graphics.GPipe.Internal.PrimitiveArray,
                    Graphics.GPipe.Internal.PrimitiveStream,
                    Graphics.GPipe.Internal.Shader,
                    Graphics.GPipe.Internal.Texture,
                    Graphics.GPipe.Internal.Uniform
  