name:           GPipe
version:        2.0
cabal-version:  >= 1.8
build-type:     Simple
author:         Tobias Bexelius
license:        MIT
license-file:   LICENSE
copyright:      Tobias Bexelius
category:       Graphics
stability:      Experimental
synopsis:       Typesafe functional OpenGl, including DSL to generate GLSL
homepage:       http://tobbebex.blogspot.se/

library
  hs-source-dirs:   src
  build-depends:    base >= 4.7 && < 4.9,
                    transformers >= 0.3 && < 0.5,
                    exception-transformers >= 0.3 && < 0.5,
                    containers >= 0.5 && < 0.6,
                    Boolean >= 0.2 && <0.3,
                    hashtables >= 1.2 && < 1.3,
                    gl >= 0.7 && < 0.8,
                    linear >= 1.18 && < 1.20
  exposed-modules:  
                    Graphics.GPipe,
                    Graphics.GPipe.Buffer,
                    Graphics.GPipe.Context,
                    Graphics.GPipe.Expr,
                    Graphics.GPipe.Format,
                    Graphics.GPipe.FragmentStream,
                    Graphics.GPipe.FrameBuffer,
                    Graphics.GPipe.PrimitiveArray,
                    Graphics.GPipe.PrimitiveStream,
                    Graphics.GPipe.Sampler,
                    Graphics.GPipe.Shader,
                    Graphics.GPipe.Texture,
                    Graphics.GPipe.Uniform
  other-modules:    
                    Data.SNMap,
                    Graphics.GPipe.Internal.Buffer,
                    Graphics.GPipe.Internal.Compiler,
                    Graphics.GPipe.Internal.Context,
                    Graphics.GPipe.Internal.Expr,
                    Graphics.GPipe.Internal.Format,
                    Graphics.GPipe.Internal.FragmentStream,
                    Graphics.GPipe.Internal.FrameBuffer,
                    Graphics.GPipe.Internal.PrimitiveArray,
                    Graphics.GPipe.Internal.PrimitiveStream,
                    Graphics.GPipe.Internal.Shader,
                    Graphics.GPipe.Internal.Texture,
                    Graphics.GPipe.Internal.Uniform
  