name:           GPipe
version:        2.1.8
cabal-version:  >= 1.8
build-type:     Simple
author:         Tobias Bexelius
license:        MIT
license-file:   LICENSE
copyright:      Tobias Bexelius
category:       Graphics
stability:      Experimental
synopsis:       Typesafe functional GPU graphics programming
homepage:       https://github.com/tobbebex/GPipe-Core#readme
bug-reports:    https://github.com/tobbebex/GPipe-Core/issues
description:    
                A typesafe API based on the conceptual model of OpenGl, but without the imperative state machine. 
                Aims to be as close to the raw OpenGl performance as possible, without compromising type safety or functional style. 
                Includes DSL for shaders to provide type safety even when crossing into that domain.
                Uses OpenGl 3.3 core profile under the hood.
maintainer:     Tobias Bexelius
data-files:     CHANGELOG.md

library
  hs-source-dirs:   src
  build-depends:    base >= 4.9 && < 4.10,
                    transformers >= 0.5.2 && < 0.6,
                    exception-transformers >= 0.3 && < 0.5,
                    containers >= 0.5 && < 0.6,
                    Boolean >= 0.2 && <0.3,
                    hashtables >= 1.2 && < 1.3,
                    gl >= 0.7 && < 0.8,
                    linear >= 1.18 && < 1.21
  exposed-modules:  
                    Graphics.GPipe,
                    Graphics.GPipe.Buffer,
                    Graphics.GPipe.Context,
                    Graphics.GPipe.Expr,
                    Graphics.GPipe.Format,
                    Graphics.GPipe.FragmentStream,
                    Graphics.GPipe.FrameBuffer,
                    Graphics.GPipe.PrimitiveArray,
                    Graphics.GPipe.PrimitiveStream,
                    Graphics.GPipe.Sampler,
                    Graphics.GPipe.Shader,
                    Graphics.GPipe.Texture,
                    Graphics.GPipe.Uniform,
                    Graphics.GPipe.Orphans
  other-modules:    
                    Data.SNMap,
                    Graphics.GPipe.Internal.Buffer,
                    Graphics.GPipe.Internal.Compiler,
                    Graphics.GPipe.Internal.Context,
                    Graphics.GPipe.Internal.Expr,
                    Graphics.GPipe.Internal.Format,
                    Graphics.GPipe.Internal.FragmentStream,
                    Graphics.GPipe.Internal.FrameBuffer,
                    Graphics.GPipe.Internal.PrimitiveArray,
                    Graphics.GPipe.Internal.PrimitiveStream,
                    Graphics.GPipe.Internal.Shader,
                    Graphics.GPipe.Internal.Texture,
                    Graphics.GPipe.Internal.Uniform,
                    Graphics.GPipe.Internal.Orphans

